--- a/css/my.css
+++ b/css/my.css
@@ -2,3 +2,7 @@ article .container p.small-text {
     color: rgb(0, 174, 255); 
     font-size: 15px;   
 }
+#image_text{
+    color: black;
+    font-size: 20px; 
+}
